all views are ready

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -2,6 +2,7 @@
 
 <%= simple_form_for(@bookmark) do |f| %>
   <%= f.input :comment %>
+  <%# How to select a movie from the data base via a dropdown?! %>
   <%= f.submit %>
 <% end %>
 
