--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,17 @@
 <div style="padding:30px">
   <h1><%= @list.name %></h1>
-  <p>Add movie form should be here...</p>
+  <p>Add bookmark form should be here... and this is where we add the movie</p>
+  <%= link_to "Add a Bookmark to this List", new_bookmark_path %>
+  <br><br>
   <%= link_to "Back to Lists", lists_path %>
 </div>
+
+
+  <%# create_table "bookmarks", force: :cascade do |t|
+    t.string "comment"
+    t.bigint "movie_id", null: false
+    t.bigint "list_id", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["list_id"], name: "index_bookmarks_on_list_id"
+    t.index ["movie_id"], name: "index_bookmarks_on_movie_id" %>
