Core functions complete

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,8 +1,5 @@
 <div style="padding:30px">
-<h1>Lists</h1>
-  <%# Create a list %>
-  <%= link_to "Create a new list", new_list_path %>
-
+<h1>Sean's Watch Lists</h1>
   <%# Click on a list from a list of lists %>
   <div>
   <h5 style="padding-top: 30px">My Lists</h5>
@@ -12,4 +9,8 @@
       <% end %>
     </div>
   </div>
+  <br><br><br><br><br><br><br><br><br><br>
+  <%# Create a list %>
+  <%= link_to "Create a new list", new_list_path %>
+
 </div>
