--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,9 +1,12 @@
-<h1>Bookmarks NEW page</h1>
+<h1>New Bookmark</h1>
 
-<%= simple_form_for(@bookmark) do |f| %>
+<%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.input :comment %>
   <%# How to select a movie from the data base via a dropdown?! %>
+  <%= f.association :movie %>
   <%= f.submit %>
 <% end %>
+
+<%= link_to "Back to #{@list.name}", lists_path %>
 
 <%# http://localhost:3000/bookmarks/new %>
