--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,17 +1,11 @@
 <div style="padding:30px">
   <h1><%= @list.name %></h1>
-  <p>Add bookmark form should be here... and this is where we add the movie</p>
-  <%= link_to "Add a Bookmark to this List", new_bookmark_path %>
+  <h3 style="padding-top: 30px">My Bookmarks</h3>
+  <p>My bookmarks should show here...</p><br>
+
+
+  <h3>Add a Bookmark</h3><br>
+  <%= link_to "Add a Bookmark to #{@list.name}", new_list_bookmark_path(@list) %>
   <br><br>
-  <%= link_to "Back to Lists", lists_path %>
+  <%= link_to "Back to List", lists_path %>
 </div>
-
-
-  <%# create_table "bookmarks", force: :cascade do |t|
-    t.string "comment"
-    t.bigint "movie_id", null: false
-    t.bigint "list_id", null: false
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-    t.index ["list_id"], name: "index_bookmarks_on_list_id"
-    t.index ["movie_id"], name: "index_bookmarks_on_movie_id" %>
