--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -11,6 +11,6 @@
   </div>
   <br><br><br><br><br><br><br><br><br><br>
   <%# Create a list %>
-  <%= link_to "Create a new list", new_list_path %>
+    <%= link_to "Add a new List", new_list_path %>
 
 </div>
