--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -1,4 +1,12 @@
 <h1>Individual Bookmark SHOW page</h1>
+<br>
+<p>Film: <%=  %></p>
+<br>
+<p>List: <%=  %></p>
+<br>
+<p><%= link_to "Delete this Bookmark",
+  bookmark_path(@bookmark),
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+<%= link_to 'Delete', bookmarks_path(@list), data: { turbo_method: :delete, turbo_confirm: "Are you sure"} %>
 
-
-<%# http://localhost:3000/bookmarks/1 %>
+%></p>
